# rakutenai_py

./: .gitignore  README.md  chat.py  image_generation_test.py  main.py  pyproject.toml
src/rakutenai_py/: __init__.py  chat.py  core.py
tests/: test_chat.py  test_core.py  test_integration_image_generation.py
