[project]
name = "rakutenai_py"
version = "0.1.0"
description = "Unofficial Python client for Rakuten AI."
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
