[project]
name = "rakutenai_py"
version = "0.1.0"
description = "Unofficial Python client for Rakuten AI."
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "mypy>=1.14.1",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

